# workerpool-rs

./: .editorconfig  README.md  package-lock.json  package.json
rust/: Cargo.toml
sdk/: Cargo.toml
sdk/crates/cli/: Cargo.toml
sdk/crates/cli/src/: main.rs  routines.rs
sdk/crates/cli/src/same_thread/: global.rs  manual.rs  mod.rs
sdk/crates/wasm/: Cargo.toml
sdk/crates/wasm/src/: context.rs  lib.rs  main_application_client.rs  routines.rs  worker_client.rs
sdk/crates/wasm/src/wasm_workerpool/: mod.rs  web_worker_backend.js  web_worker_backend.rs
sdk/crates/workerpool/: Cargo.toml
sdk/crates/workerpool-macro/: Cargo.toml
sdk/crates/workerpool-macro/src/: lib.rs
sdk/crates/workerpool-macro/tests/: mod.rs
sdk/crates/workerpool-rs/: Cargo.toml  README.md
sdk/crates/workerpool-rs-wasm/: Cargo.toml  README.md
sdk/crates/workerpool-rs-wasm/src/: error.rs  js_channel.rs  lib.rs  no_shared_memory.rs
sdk/crates/workerpool-rs-wasm/src/no_shared_memory/: backend.rs  mod.rs  worker.rs
sdk/crates/workerpool-rs/src/: global.rs  lib.rs  worker_backend.rs  worker_pool.rs
sdk/crates/workerpool-rs/src/backends/: same_thread_backend.rs
sdk/crates/workerpool-rs/src/routines/: mod.rs  routine.rs  routine_registry.rs
sdk/crates/workerpool-rs/src/workers/: mod.rs  worker_backend.rs  worker_pool.rs
sdk/crates/workerpool/src/: executable.rs  global.rs  lib.rs  task.rs  worker_backend.rs  worker_pool.rs
sdk/crates/workerpool/src/backends/: mod.rs  same_thread_backend.rs
sdk/crates/workerpool/src/client/: worker.rs
sdk/crates/workerpool/src/executable/: global.rs  mod.rs  routine.rs  routine_registry.rs  task.rs
sdk/crates/workerpool/src/routines/: routine.rs
sdk/crates/workerpool/src/server/: mod.rs  worker_backend.rs  worker_pool.rs
sdk/crates/workerpool/src/worker/: worker.rs
sdk/crates/workerpool/src/workers/: worker_pool.rs
web/: bs-config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/public/: index.html
web/src/: index.html  index.ts  worker.js  worker.ts
web/src/sdk/: client-factory.ts  index.ts
