[package]
name = "wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ctor = "0.2.8"
wasm-bindgen = "0.2.93"
workerpool = { version = "0.0.1", path = "../workerpool" }
workerpool-macro = { version = "0.0.1", path = "../workerpool-macro" }

[lib]
crate-type = [
  "cdylib",
] # This tells Rust to compile into a C-compatible dynamic library (WASM)

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # Disable wasm-opt for faster builds during development
