[package]
name = "wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
crate = "0.0.0"
ctor = "0.2.8"
extern = "0.0.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
workerpool = { version = "0.0.1", path = "../workerpool" }
workerpool-macro = { version = "0.0.1", path = "../workerpool-macro" }

[lib]
crate-type = [
  "cdylib",
] # This tells Rust to compile into a C-compatible dynamic library (WASM)

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # Disable wasm-opt for faster builds during development
