[package]
name = "wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []
shared-memory = [
  "workerpool-rs/shared-memory",
  "workerpool-rs-wasm/shared-memory",
]

[dependencies]
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
crate = "0.0.0"
ctor = "0.2.8"
extern = "0.0.0"
js-sys = "0.3.70"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["sync"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
workerpool-rs = { path = "../workerpool-rs" }
workerpool-rs-wasm = { path = "../workerpool-rs-wasm" }


[lib]
crate-type = [
  "cdylib",
] # This tells Rust to compile into a C-compatible dynamic library (WASM)

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # Disable wasm-opt for faster builds during development
