[package]
name = "workerpool-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true
crate-type = ["proc-macro"]

[dependencies]
ctor = "0.2.8"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
workerpool = { path = "../workerpool" }
