[package]
name = "workerpool-rs-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []
shared-memory = []

[dependencies]
serde = "1.0.210"
thiserror = "1.0.63"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["Worker", "WorkerOptions", "WorkerType", "console"] }
workerpool-rs = { version = "0.0.1", path = "../workerpool-rs" }
