[package]
name = "workerpool-rs-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []
shared-memory = []

[dependencies]
anyhow = "1.0.89"
serde = "1.0.210"
serde-wasm-bindgen = "0.6.5"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["sync"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.70", features = ["DedicatedWorkerGlobalScope", "MessageEvent", "Worker", "WorkerGlobalScope", "WorkerOptions", "WorkerType", "console"] }
workerpool-rs = { version = "0.0.1", path = "../workerpool-rs" }
